--- a/index.html
+++ b/index.html
@@ -218,23 +218,204 @@
                 <!-- end ticket widget  -->
 
                 <!-- start latest news widget  -->
-                <div class="latest-news"></div>
+                <div class="latest-news bg-white p-20 rad-6">
+                    <h2 class="mb-20">Latest News</h2>
+                    <div class="row d-flex align-center mb-20">
+                        <img src="img/news-01.png" alt="">
+                        <div class="info">
+                            <h3 class="fs-16">Created SASS Section</h3>
+                            <p class="fs-13 c-gray">New SASS Examples & Tutorials</p>
+                        </div>
+                        <p class="time btn-shape bg-eee fs-13">3 Days Ago</p>
+                    </div>
+                    <div class="row d-flex align-center mb-20">
+                        <img src="img/news-02.png" alt="">
+                        <div class="info">
+                            <h3 class="fs-16">Changed The Design</h3>
+                            <p class="fs-13 c-gray">A Brand New Website Design</p>
+                        </div>
+                        <p class="time btn-shape bg-eee fs-13">7 Days Ago</p>
+                    </div>
+                    <div class="row d-flex align-center mb-20">
+                        <img src="img/news-03.png" alt="">
+                        <div class="info">
+                            <h3 class="fs-16">Team Increased</h3>
+                            <p class="fs-13 c-gray">3 Developers Joined The Team</p>
+                        </div>
+                        <p class="time btn-shape bg-eee fs-13">6 Days Ago</p>
+                    </div>
+                    <div class="row d-flex align-center mb-20">
+                        <img src="img/news-04.png" alt="">
+                        <div class="info">
+                            <h3 class="fs-16">Added Payment Gateway</h3>
+                            <p class="fs-13 c-gray">Many New Payment Gateways</p>
+                        </div>
+                        <p class="time btn-shape bg-eee fs-13">4 Days Ago</p>
+                    </div>
+                </div>
                 <!-- end latest news widget  -->
 
                 <!-- start task widget  -->
-                <div class="tasks"></div>
+                <div class="tasks bg-white p-20 rad-6">
+                    <h2 class="mb-20">latest tasks</h2>
+
+                    <div class="task between-flex">
+                        <div class="info f-grow1">
+                            <h3 class="fw-bold fs-16 ">Record One New Video</h3>
+                            <span class="c-gray fs-14">Record Python Create Exe Project</span>
+                        </div>
+                        <i class="fa-solid fa-trash-can "></i>
+                    </div>
+
+                    <div class="task between-flex">
+                        <div class="info f-grow1">
+                            <h3 class="fw-bold fs-16">Write Article</h3>
+                            <span class="c-gray fs-14">Write Low Level vs High Level Languages</span>
+                        </div>
+                        <i class="fa-solid fa-trash-can "></i>
+                    </div>
+
+                    <div class="task between-flex">
+                        <div class="info f-grow1">
+                            <h3 class="fw-bold fs-16">Record One New Video</h3>
+                            <span class="c-gray fs-14">Record Python Create Exe Project</span>
+                        </div>
+                        <i class="fa-solid fa-trash-can "></i>
+                    </div>
+
+                    <div class="task between-flex">
+                        <div class="info f-grow1">
+                            <h3 class="fw-bold fs-16 c-gray"><del>Record One New Video</del></h3>
+                            <span class="c-gray fs-14"><del>Record Python Create Exe Project</del></span>
+                        </div>
+                        <i class="fa-solid fa-trash-can c-gray"></i>
+                    </div>
+
+                    <div class="task between-flex">
+                        <div class="info f-grow1">
+                            <h3 class="fw-bold fs-16">Record One New Video</h3>
+                            <span class="c-gray fs-14">Record Python Create Exe Project</span>
+                        </div>
+                        <i class="fa-solid fa-trash-can "></i>
+                    </div>
+
+                </div>
                 <!-- end task widget  -->
 
                 <!-- start search widget  -->
-                <div class="search-items"></div>
+                <div class="search-items bg-white p-10">
+                    <h2 class="mb-20">Top Search Items</h2>
+                    <div class="item-head d-flex space-betwen c-gray mb-10">
+                        <p>keyword</p>
+                        <p>search count</p>
+                    </div>
+
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>programming</span>
+                        <span class="btn-shape bg-eee fs-13">220</span>
+                    </div>
+                    
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>JavaScript</span>
+                        <span class="btn-shape bg-eee fs-13">170</span>
+                    </div>
+
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>PHP</span>
+                        <span class="btn-shape bg-eee fs-13">100</span>
+                    </div>
+
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>Code</span>
+                        <span class="btn-shape bg-eee fs-13">125</span>
+                    </div>
+
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>Design</span>
+                        <span class="btn-shape bg-eee fs-13">70</span>
+                    </div>
+
+                    <div class="item d-flex space-betwen  pb-15 pt-15">
+                        <span>Logic</span>
+                        <span class="btn-shape bg-eee fs-13">55</span>
+                    </div>
+
+                </div>
                 <!-- end search widget  -->
 
                 <!-- start latest uploaded  -->
-                <div class="latest-uploaded"></div>
+                <div class="latest-uploaded p-10 bg-white">
+                    <ul class="m-0">
+
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/pdf.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/avi.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/dll.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/eps.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/psd.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+                        <li class="d-flex space-betwen align-center pb-15 mb-10">
+                            <div class="d-flex align-center">
+                                <img class="mr-10" src="img/zip.svg" alt=""> 
+                            <div>                         
+                                <span class="d-block fw-bold">my-file.pdf</span>
+                                <span class="c-gray">Elzero</span>
+                            </div>
+                            </div>
+                            <span class="btn-shape bg-eee fs-13">2.9mb</span>
+                        </li>
+
+                    </ul>
+                </div>
                 <!-- end latest uploaded  -->
 
                 <!-- start last project  -->
-                <div class="last-project"></div>
+                <div class="last-project">
+
+                </div>
                 <!-- end last project  -->
 
                 <!-- start reminders -->
