--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
                     <p class="c-gray fs-14 mb-20">Everything About Support Tickets</p>
                     <div class="d-flex f-wrap txt-c gap-20">
                         <div class="box rad-10  p-20 fs-14">
-                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"></i>
+                            <i class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange "></i>
                             <span class="d-block fw-bold c-black mb-5 fs-25">2500</span>
                            Total
                         </div>
                         <div class="box rad-10 p-20 fs-14">
-                            <i class="fa-solid fa-spinner fa-2x mb-10 c-blue"></i>
+                            <i class="fa-solid fa-spinner fa-2x mb-10 c-blue cir"></i>
                             <span class="d-block fw-bold c-black mb-5 fs-25">500</span>
                             Pending
                         </div>
@@ -303,7 +303,7 @@
                 <!-- end task widget  -->
 
                 <!-- start search widget  -->
-                <div class="search-items bg-white p-10">
+                <div class="search-items bg-white p-20">
                     <h2 class="mb-20">Top Search Items</h2>
                     <div class="item-head d-flex space-betwen c-gray mb-10">
                         <p>keyword</p>
@@ -344,7 +344,7 @@
                 <!-- end search widget  -->
 
                 <!-- start latest uploaded  -->
-                <div class="latest-uploaded p-10 bg-white">
+                <div class="latest-uploaded p-20 bg-white">
                     <ul class="m-0">
 
                         <li class="d-flex space-betwen align-center pb-15 mb-10">
@@ -413,25 +413,140 @@
                 <!-- end latest uploaded  -->
 
                 <!-- start last project  -->
-                <div class="last-project">
-
+                <div class="last-project bg-white p-20 p-relative">
+                    <h2 class="mb-20">last project progress</h2>
+                    <ul>
+                        <li class="done">go to project</li>
+                        <li class="done">Started The Project</li>
+                        <li class="done">The Project About To Finish</li>
+                        <li class="curent">Test The Project</li>
+                        <li>Finish The Project & Get Money</li>
+                    </ul>
+                    <img src="img/project.png" alt="">
                 </div>
                 <!-- end last project  -->
 
                 <!-- start reminders -->
-                <div class="reminders"></div>
+                <div class="reminders bg-white p-20 p-relative">
+                    <h2 class="mb-20">reminders</h2>
+                    <ul>
+                        <li class="d-flex align-center pb-15">
+                            <span class="point bg-blue rad-half mr-15"></span>
+                            <div class="pl-15 blue">
+                                <p class="fw-bold fs-14 mb-10 mt-0">Check My Tasks List</p>
+                                <span class="fs-13">28/09/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center pb-15">
+                            <span class="point bg-green rad-half mr-15"></span>
+                            <div class="pl-15 green">
+                                <p class="fw-bold fs-14 mb-10 mt-0">Check My Tasks List</p>
+                                <span class="fs-13">28/09/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center pb-15">
+                            <span class="point bg-orange rad-half mr-15"></span>
+                            <div class="pl-15 orange">
+                                <p class="fw-bold fs-14 mb-10 mt-0">Check My Tasks List</p>
+                                <span class="fs-13">28/09/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                        <li class="d-flex align-center pb-15">
+                            <span class="point bg-red rad-half mr-15"></span>
+                            <div class="pl-15 red">
+                                <p class="fw-bold fs-14 mb-10 mt-0">Check My Tasks List</p>
+                                <span class="fs-13">28/09/2022 - 12:00am</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <!-- end reminders -->
 
                 <!-- start  latest post widget  -->
-                <div class="latest-post"></div>
+                <div class="latest-post bg-white p-20 p-relative">
+                    <h2 class="mb-20">latest post</h2>
+                    <div class="top d-flex align-center">
+                        <img src="img/avatar.png" class="rad-half mr-15" alt="">
+                        <div class="info">
+                            <p class="fs-20 fw-bold mb-5">Ahmed EL-Kilany</p>
+                            <span class="fs-16 c-gray ">about 1 day ago</span>
+                        </div>
+                    </div>
+                    <div class="content pt-20 pb-20 mt-20 mb-20">
+                        <p class="fs-16 "> 
+                            You Can Fool All Of The People Some Of The Time,
+                             And Some Of The People All Of The Time, 
+                             But You Can't Fool All Of The People All Of The Time.
+                        </p>
+                    </div>
+                    <div class="stutes d-flex space-betwen c-gray">
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <span>1.8k</span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-comments"></i>
+                            <span>250</span>
+                        </div>
+                    </div>
+                </div>
                 <!-- end latest post widget  -->
 
                 <!-- start social media  -->
-                <div class="social-media"></div>
+                <div class="social-media bg-white p-20 p-relative">
+                    <h2 class="mb-20 mt-0">Social Media Stats</h2>
+
+                    <div class="box twitter p-15 between-flex mb-10 p-relative p-15">
+                        <i class="fa-brands fa-twitter fa-2x c-white d-flex full-h"></i>
+                        <span>90K Followers</span>
+                        <a href="#" class="btn-shape c-white">follow</a>
+                    </div>
+                    <div class="box facebook p-15 between-flex mb-10 p-relative p-15">
+                        <i class="fa-brands fa-facebook-f fa-2x c-white d-flex full-h"></i>
+                        <span>90K Followers</span>
+                        <a href="#" class="btn-shape c-white">follow</a>
+                    </div>
+                    <div class="box youtube p-15 between-flex mb-10 p-relative p-15">
+                        <i class="fa-brands fa-youtube fa-2x c-white d-flex full-h"></i>
+                        <span>90K Followers</span>
+                        <a href="#" class="btn-shape c-white">follow</a>
+                    </div>
+                    <div class="box linkedin p-15 between-flex mb-10 p-relative p-15">
+                        <i class="fa-brands fa-linkedin fa-2x c-white d-flex full-h"></i>
+                        <span>90K Followers</span>
+                        <a href="#" class="btn-shape c-white">follow</a>
+                    </div>
+                </div>
                 <!-- end social media  -->
 
                 <!-- start projects widget  -->
-                <div class="projects"></div>
+                <div class="projects bg-white p-20 p-relative full-w">
+                    <h2 class="mb-20">projects</h2>
+                    <div class="table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>name</td>
+                                    <td>finish data</td>
+                                    <td>ckient</td>
+                                    <td>price</td>
+                                    <td>team</td>
+                                    <td>stutes</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>template one</td>
+                                    <td>20 seb 2022</td>
+                                    <td>ahmed</td>
+                                    <td>3500$</td>
+                                    <td>team$</td>
+                                    <td> <span class="btn-shape bg-blue c-white">in progress</span> </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
                 <!-- end projects widget  -->
             </div>
         </div>
