--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="profile.html">
                         <i class="fa-solid fa-user-tie"></i>     
                         <span class="hide-mobile">Profile</span>
                     </a>
