--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="projects.html">
                         <i class="fa-solid fa-diagram-project"></i>     
                         <span class="hide-mobile">Projects</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="courses.html">
                         <i class="fa-solid fa-graduation-cap"></i>     
                         <span class="hide-mobile">Courses</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="friends.html">
                         <i class="fa-solid fa-user-group"></i>     
                         <span class="hide-mobile">Friends</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="files.html">
                         <i class="fa-solid fa-file-pdf"></i>     
                         <span class="hide-mobile">Files</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="plans.html">
                         <i class="fa-regular fa-credit-card"></i>     
                         <span class="hide-mobile">Plans</span>
                     </a>
