--- a/setting.html
+++ b/setting.html
@@ -46,25 +46,25 @@
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="courses.html">
                         <i class="fa-solid fa-graduation-cap"></i>     
                         <span class="hide-mobile">Courses</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="friends.html">
                         <i class="fa-solid fa-user-group"></i>     
                         <span class="hide-mobile">Friends</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="files.html">
                         <i class="fa-solid fa-file-pdf"></i>     
                         <span class="hide-mobile">Files</span>
                     </a>
                 </li>
                 <li>
-                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="index.html">
+                    <a class=" d-flex align-center fs-14 c-black rad-6 p-10" href="plans.html">
                         <i class="fa-regular fa-credit-card"></i>     
                         <span class="hide-mobile">Plans</span>
                     </a>
@@ -220,7 +220,7 @@
                         <label for="daily1" class="">daily</label>
                     </div>
                     <div class="date mb-10">
-                        <input type="radio" id="daily2" name="time">
+                        <input type="radio" id="daily2" name="time" checked>
                         <label for="daily2" class="">weekly</label>
                     </div>
                     <div class="date mb-10">
