--- a/courses.html
+++ b/courses.html
@@ -118,7 +118,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses11.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -142,7 +142,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses2.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -166,7 +166,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses3.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -190,7 +190,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses4.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -214,7 +214,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses5.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -238,7 +238,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses6.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -262,7 +262,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses7.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -286,7 +286,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses8.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -310,7 +310,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses9.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -334,7 +334,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses10.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
@@ -358,7 +358,7 @@
 
                 <div class="box rad-6 bg-white">
                     <div class="photo p-relative">
-                        <img class="cover " src="img/courses.jpg" alt="" class="cover">
+                        <img class="cover " src="img/courses12.jpg" alt="" class="cover">
                         <img class="structure" src="img/team-01.png" alt="">
                     </div>
                     <h3 class="mt-20 p-10">mastering web design </h3>
