--- a/plans.html
+++ b/plans.html
@@ -94,10 +94,10 @@
 
                 <div class="plan green p-20 bg-white" >
                     <div class="top txt-c bg-green p-20 c-white">
-                        <p class="c-white">free</p>
+                        <p class="c-white">pro</p>
                         <div class="money">
                             <span class="dollar">$</span>
-                            <span class="number">0.00</span>
+                            <span class="number">100.00</span>
                         </div>
                     </div>
                     <ul class="mt-20">
@@ -122,22 +122,22 @@
                             <i class="fa-solid fa-circle-info help"></i>
                         </li>
                         <li>
-                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
                             <span>access badge system</span>
                             <i class="fa-solid fa-circle-info help"></i>
                         </li>
                         <li>
-                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
                             <span>access all text lessons</span>
                             <i class="fa-solid fa-circle-info help"></i>
                         </li>
                         <li>
-                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
                             <span>access badge system</span>
                             <i class="fa-solid fa-circle-info help"></i>
                         </li>
                         <li>
-                            <i class="fa-solid fa-xmark fa-fw"></i>
+                            <i class="fa-solid fa-check fa-fw yes"></i>
                             <span>access all text lessons</span>
                             <i class="fa-solid fa-circle-info help"></i>
                         </li>
@@ -148,10 +148,10 @@
 
                 <div class="plan blue p-20 bg-white" >
                     <div class="top txt-c bg-blue p-20 c-white">
-                        <p class="c-white">free</p>
+                        <p class="c-white">mediem</p>
                         <div class="money">
                             <span class="dollar">$</span>
-                            <span class="number">0.00</span>
+                            <span class="number">50.00</span>
                         </div>
                     </div>
                     <ul class="mt-20">
