--- a/projects.html
+++ b/projects.html
@@ -116,14 +116,83 @@
                     </div>
                 </div>
                 <div class="project bg-white p-20 rad-6 p-relative">
-                    <p class="fs-16 fw-bold mb-10">kilany dashboard</p>
-                    <span class="c-gray fs-14 ">kilany dashboard project design and programming and hosting</span>
+                    <p class="fs-16 fw-bold mb-10">facebook site</p>
+                    <span class="c-gray fs-14 ">facebook design and programming and hosting</span>
                     <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
                         <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-05.png" alt=""></a>
+                        <a href="#"><img src="img/team-02.png" alt=""></a>
+                        <a href="#"><img src="img/team-03.png" alt=""></a>
+                    </div>
+                    <div class="info d-flex flex-end p-10">
+                        <span>programming</span>
+                        <span>design</span>
+                        <span>hosting</span>
+                        <span>markting</span>
+                    </div>
+                    <div class="prog-info d-flex between-flex p-10">
+                        <div class="progress p-relative rad-6">
+                            <span class="p-absolute bg-orange rad-6 " style="width: 70%; height: 100%;"></span>
+                        </div>
+                        <div class="money">300$</div>
+                    </div>
+                </div>
+                <div class="project bg-white p-20 rad-6 p-relative">
+                    <p class="fs-16 fw-bold mb-10">kilany portofolio</p>
+                    <span class="c-gray fs-14 ">portofolio design and programming and hosting</span>
+                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
                         <a href="#"><img src="img/team-02.png" alt=""></a>
                         <a href="#"><img src="img/team-03.png" alt=""></a>
                         <a href="#"><img src="img/team-01.png" alt=""></a>
                         <a href="#"><img src="img/team-05.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                    </div>
+                    <div class="info d-flex flex-end p-10">
+                        <span>programming</span>
+                        <span>design</span>
+                        <span>hosting</span>
+                        <span>markting</span>
+                    </div>
+                    <div class="prog-info d-flex between-flex p-10">
+                        <div class="progress p-relative rad-6">
+                            <span class="p-absolute bg-orange rad-6 " style="width: 40%; height: 100%;"></span>
+                        </div>
+                        <div class="money">200$</div>
+                    </div>
+                </div>
+                <div class="project bg-white p-20 rad-6 p-relative">
+                    <p class="fs-16 fw-bold mb-10">youtube </p>
+                    <span class="c-gray fs-14 ">youtube design and programming and hosting</span>
+                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
+                        <a href="#"><img src="img/team-02.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-03.png" alt=""></a>
+                        <a href="#"><img src="img/team-05.png" alt=""></a>
+                    </div>
+                    <div class="info d-flex flex-end p-10">
+                        <span>programming</span>
+                        <span>design</span>
+                        <span>hosting</span>
+                        <span>markting</span>
+                    </div>
+                    <div class="prog-info d-flex between-flex p-10">
+                        <div class="progress p-relative rad-6">
+                            <span class="p-absolute bg-orange rad-6 " style="width: 90%; height: 100%;"></span>
+                        </div>
+                        <div class="money">350$</div>
+                    </div>
+                </div>
+                <div class="project bg-white p-20 rad-6 p-relative">
+                    <p class="fs-16 fw-bold mb-10">kilany store</p>
+                    <span class="c-gray fs-14 ">online store design and programming and hosting</span>
+                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
+                        <a href="#"><img src="img/team-05.png" alt=""></a>
+                        <a href="#"><img src="img/team-02.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-01.png" alt=""></a>
+                        <a href="#"><img src="img/team-03.png" alt=""></a>
                     </div>
                     <div class="info d-flex flex-end p-10">
                         <span>programming</span>
@@ -139,83 +208,14 @@
                     </div>
                 </div>
                 <div class="project bg-white p-20 rad-6 p-relative">
-                    <p class="fs-16 fw-bold mb-10">kilany dashboard</p>
-                    <span class="c-gray fs-14 ">kilany dashboard project design and programming and hosting</span>
+                    <p class="fs-16 fw-bold mb-10"> landing</p>
+                    <span class="c-gray fs-14 ">landing page design and programming and hosting</span>
                     <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-02.png" alt=""></a>
                         <a href="#"><img src="img/team-03.png" alt=""></a>
                         <a href="#"><img src="img/team-01.png" alt=""></a>
                         <a href="#"><img src="img/team-05.png" alt=""></a>
-                    </div>
-                    <div class="info d-flex flex-end p-10">
-                        <span>programming</span>
-                        <span>design</span>
-                        <span>hosting</span>
-                        <span>markting</span>
-                    </div>
-                    <div class="prog-info d-flex between-flex p-10">
-                        <div class="progress p-relative rad-6">
-                            <span class="p-absolute bg-orange rad-6 " style="width: 60%; height: 100%;"></span>
-                        </div>
-                        <div class="money">250$</div>
-                    </div>
-                </div>
-                <div class="project bg-white p-20 rad-6 p-relative">
-                    <p class="fs-16 fw-bold mb-10">kilany dashboard</p>
-                    <span class="c-gray fs-14 ">kilany dashboard project design and programming and hosting</span>
-                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
                         <a href="#"><img src="img/team-01.png" alt=""></a>
                         <a href="#"><img src="img/team-02.png" alt=""></a>
-                        <a href="#"><img src="img/team-03.png" alt=""></a>
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-05.png" alt=""></a>
-                    </div>
-                    <div class="info d-flex flex-end p-10">
-                        <span>programming</span>
-                        <span>design</span>
-                        <span>hosting</span>
-                        <span>markting</span>
-                    </div>
-                    <div class="prog-info d-flex between-flex p-10">
-                        <div class="progress p-relative rad-6">
-                            <span class="p-absolute bg-orange rad-6 " style="width: 60%; height: 100%;"></span>
-                        </div>
-                        <div class="money">250$</div>
-                    </div>
-                </div>
-                <div class="project bg-white p-20 rad-6 p-relative">
-                    <p class="fs-16 fw-bold mb-10">kilany dashboard</p>
-                    <span class="c-gray fs-14 ">kilany dashboard project design and programming and hosting</span>
-                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-02.png" alt=""></a>
-                        <a href="#"><img src="img/team-03.png" alt=""></a>
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-05.png" alt=""></a>
-                    </div>
-                    <div class="info d-flex flex-end p-10">
-                        <span>programming</span>
-                        <span>design</span>
-                        <span>hosting</span>
-                        <span>markting</span>
-                    </div>
-                    <div class="prog-info d-flex between-flex p-10">
-                        <div class="progress p-relative rad-6">
-                            <span class="p-absolute bg-orange rad-6 " style="width: 60%; height: 100%;"></span>
-                        </div>
-                        <div class="money">250$</div>
-                    </div>
-                </div>
-                <div class="project bg-white p-20 rad-6 p-relative">
-                    <p class="fs-16 fw-bold mb-10">kilany dashboard</p>
-                    <span class="c-gray fs-14 ">kilany dashboard project design and programming and hosting</span>
-                    <div class="team d-flex gap-25 p-relative pt-20 mt-20 mb-20">
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-02.png" alt=""></a>
-                        <a href="#"><img src="img/team-03.png" alt=""></a>
-                        <a href="#"><img src="img/team-01.png" alt=""></a>
-                        <a href="#"><img src="img/team-05.png" alt=""></a>
                     </div>
                     <div class="info d-flex flex-end p-10">
                         <span>programming</span>
